# HRCommand

./: .gitignore  CLAUDE.md  HR-Command-Center-Roadmap.md  README.md  features.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts
docs/: CONTEXT_SCALING_ARCHITECTURE.md  HR_PERSONA.md  KNOWN_ISSUES.md  PLAN_2.1.D_TEST_DATA.md  PROGRESS.md  ROADMAP.md  SESSION_PROTOCOL.md  UI-UX-FEEDBACK.md
docs/archive/: CONTEXT_SCALING_ARCHITECTURE.md  PLAN_2.1.D_TEST_DATA.md  PROGRESS_PHASES_0-2.md  PROGRESS_PHASES_3-4.1.md  PROGRESS_PHASES_4.2-V2.0.md  PROGRESS_V2.1.1-V2.2.1.md  SCHEMA_EXPANSION_V1.md
docs/reference/: DECISIONS-LOG.md  MASTER-FEEDBACK-CONSOLIDATED.md  README.md  claudefeedback.md  codexfeedback.md  cursorfeedback.md  geminifeedback.md  gpt52feedback.md  grokfeedback.md
scripts/: dev-init.sh  generate-test-data.ts  import-test-data.ts  run-extraction.ts
scripts/data/: enps-feedback.json  (+3 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_performance_enps.sql  003_review_highlights.sql  004_insight_canvas.sql
src-tauri/src/: analytics.rs  analytics_templates.rs  audit.rs  backup.rs  bulk_import.rs  chat.rs  company.rs  context.rs  conversations.rs  db.rs  employees.rs  enps.rs  file_parser.rs  highlights.rs  insight_canvas.rs  keyring.rs  lib.rs  main.rs  memory.rs  network.rs  performance_ratings.rs  performance_reviews.rs  pii.rs  review_cycles.rs  settings.rs
test-data/: new_hires_template.csv
(+95 files in other folders)
